--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ aiofiles
 asyncio
 ffmpeg-python
 pillow
-pyrogram
+pyrogram==1.4.16
 hachoir
 lyricsgenius
 py-tgcalls
@@ -17,7 +17,7 @@ psutil
 requests
 rich
 dnspython
-yt-dlp==2021.11.10.1
+yt-dlp
 tgcrypto
 gitpython
 heroku3
